--- a/angular-app/src/styles.scss
+++ b/angular-app/src/styles.scss
@@ -4,8 +4,9 @@ $angular: #b52e31;
 $angular-light: #eb7a7c;
 $react: #00b3e6;
 $react-light: #61dafb;
-$primary: $angular;
-$primary-light: $angular-light;
+$azure: #007fff;
+$primary: $azure;
+$primary-light: $react;
 $link: $primary; // #00b3e6; // #ff4081;
 
 $shade-light: #fafafa;
@@ -22,6 +23,7 @@ $shade-light: #fafafa;
     font-size: 20px;
     margin-right: 8px;
   }
+
   .title {
     letter-spacing: 0px;
     font-weight: normal;
@@ -33,37 +35,47 @@ $shade-light: #fafafa;
 header {
   font-weight: bold;
   font-family: Arial;
+
   span {
     letter-spacing: 0px;
+
     &.brand-first {
       color: #fff;
     }
+
     &.brand-second {
       color: #ccc;
     }
+
     &.brand-third {
       color: $primary-light;
     }
   }
+
   .navbar-item.nav-home {
     border: 3px solid transparent;
     border-radius: 0%;
+
     &:hover {
-      border-right: 3px solid $primary-light;
+      border-right: 3px solid $azure;
       border-left: 3px solid $primary-light;
     }
   }
+
   .fab {
     font-size: 24px;
+
     &.js-logo {
       color: $primary-light;
     }
   }
+
   .buttons {
     i.fab {
       color: #fff;
       margin-left: 20px;
       margin-right: 10px;
+
       &:hover {
         color: $primary-light;
       }
@@ -75,6 +87,7 @@ header {
   .input[readonly] {
     background-color: $shade-light;
   }
+
   .input::placeholder {
     color: #ccc;
     font-style: italic;
@@ -83,6 +96,7 @@ header {
 
 .content-title-group {
   margin-bottom: 16px;
+
   h2 {
     border-left: 16px solid $primary;
     border-bottom: 2px solid $primary;
@@ -92,33 +106,42 @@ header {
     text-transform: uppercase;
     color: #555;
     letter-spacing: 0px;
+
     &:hover {
       color: $link;
     }
   }
+
   button.button {
     border: 0;
     color: #999;
+
     &:hover {
       color: $link;
     }
   }
 }
+
 ul.list {
   box-shadow: none;
 }
+
 div.card-content {
   background-color: $shade-light;
+
   .name {
     font-size: 28px;
     color: #000;
   }
+
   .description {
     font-size: 20px;
     color: #999;
   }
+
   background-color: $shade-light;
 }
+
 .card {
   margin-bottom: 2em;
 }
@@ -135,12 +158,16 @@ p.card-header-title {
   display: block;
   padding-left: 24px;
 }
+
 .card-footer button {
   font-size: 16px;
+
   i {
     margin-right: 10px;
   }
+
   color: #888;
+
   &:hover {
     color: $link;
   }
