--- a/angular-app/src/app/vision/vision.component.html
+++ b/angular-app/src/app/vision/vision.component.html
@@ -7,7 +7,7 @@
                 <label for="url">Enter an https:// image URL:</label>
                 <input type="url" name="url" id="url" placeholder="jpeg, png image url"
                     (change)="analyze($event.target)" #imageUrl>
-
+                <img src={{imageUrl.value}} />
                 <h2 *ngIf="isAnalysing">Analysing.... Please Wait!</h2>
                 <p></p>
             </div>
